--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,8 @@
 {% set ucx_version = "1.7.0.dev" %}
 {% set ucx_proc_version = "1.0.0" %}
 {% set ucx_commit = "9275db5" %}  # from Akshay's ucx-cuda branch
+{% set ucx_py_version = "0.1.0.dev" %}
+{% set ucx_py_commit = "7d37e7e" %}  # from rapidsai's devel branch
 {% set number = "2" %}
 
 {% set ucx_proc_type = "cpu" if cuda_compiler_version == "None" else "gpu" %}
@@ -10,8 +12,12 @@ package:
   name: ucx-split
 
 source:
-  git_url: https://github.com/Akshay-Venkatesh/ucx
-  git_rev: {{ ucx_commit }}
+  - git_url: https://github.com/Akshay-Venkatesh/ucx
+    git_rev: {{ ucx_commit }}
+    folder: ucx
+  - git_url: https://github.com/rapidsai/ucx-py
+    git_rev: {{ ucx_py_commit }}
+    folder: ucx-py
 
 build:
   skip: true  # [not linux]
@@ -64,8 +70,40 @@ outputs:
       home: https://github.com/openucx/ucx
       license: BSD-3-Clause
       license_family: BSD
-      license_file: LICENSE
+      license_file: ucx/LICENSE
       summary: Unified Communication X.
+
+  - name: ucx-py
+    version: "{{ ucx_py_version }}{{ number }}+g{{ ucx_py_commit }}"
+    build:
+      number: {{ number }}
+      skip: true  # [py<36]
+      string: "py{{ CONDA_PY }}h{{ PKG_HASH }}_{{ number }}_{{ ucx_proc_type }}"
+    requirements:
+      build:
+        - {{ compiler("c") }}
+        - {{ compiler("cxx") }}
+        - {{ compiler("cuda") }}         # [cuda_compiler_version != "None"]
+        - {{ cdt("libnl") }}
+        - {{ cdt("libibverbs") }}
+        - {{ cdt("librdmacm") }}
+      host:
+        - python
+        - setuptools
+        - cython
+        - ucx
+      run:
+        - python
+        - {{ pin_subpackage("ucx", exact=True) }}
+      run_constrained:
+        - ucx-proc * {{ ucx_proc_type }}
+    script: install_ucx-py.sh
+    test:
+      imports:
+        - ucp
+    about:
+      home: https://github.com/rapidsai/ucx-py
+      summary: Python bindings for UCX
 
 about:
   home: https://github.com/openucx/ucx
