--- a/.ci_support/linux_cuda_compiler_versionNone.yaml
+++ b/.ci_support/linux_cuda_compiler_versionNone.yaml
@@ -16,6 +16,14 @@ cxx_compiler_version:
 - '7'
 docker_image:
 - condaforge/linux-anvil-comp7
+pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
+python:
+- '2.7'
+- '3.6'
+- '3.7'
 zip_keys:
 - - cuda_compiler_version
   - docker_image
