temporarily use quasiben fork and add numpy as runtime requirement

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,8 @@
 {% set ucx_version = "1.7.0.dev" %}
 {% set ucx_proc_version = "1.0.0" %}
-{% set ucx_commit = "9275db5" %}  # from Akshay's ucx-cuda branch
+{% set ucx_commit = "7cf55ac" %}  # from Akshay's ucx-cuda branch
 {% set ucx_py_version = "0.1.0.dev" %}
-{% set ucx_py_commit = "c93687a" %}  # from rapidsai's devel branch
+{% set ucx_py_commit = "6ba3173" %}  # from rapidsai's devel branch
 {% set number = "3" %}
 
 {% set ucx_proc_type = "cpu" if cuda_compiler_version == "None" else "gpu" %}
@@ -15,7 +15,7 @@ source:
   - git_url: https://github.com/Akshay-Venkatesh/ucx
     git_rev: {{ ucx_commit }}
     folder: ucx
-  - git_url: https://github.com/rapidsai/ucx-py
+  - git_url: https://github.com/quasiben/ucx-py
     git_rev: {{ ucx_py_commit }}
     folder: ucx-py
 
@@ -94,6 +94,7 @@ outputs:
         - ucx
       run:
         - python
+        - numpy
         - {{ pin_subpackage("ucx", exact=True) }}
       run_constrained:
         - ucx-proc * {{ ucx_proc_type }}
