Create ucx-py version from git

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,6 @@
 {% set ucx_version = "1.7.0.dev" %}
 {% set ucx_proc_version = "1.0.0" %}
 {% set ucx_commit = "7cf55ac" %}  # from Akshay's ucx-cuda branch
-{% set ucx_py_version = "0.1.0.dev" %}
 {% set ucx_py_commit = "eba2cd6" %}  # from rapidsai's devel branch
 {% set number = "4" %}
 
@@ -80,7 +79,7 @@ outputs:
       summary: Unified Communication X.
 
   - name: ucx-py
-    version: "{{ ucx_py_version }}{{ number }}+g{{ ucx_py_commit }}"
+    version: "{{ environ.get('GIT_DESCRIBE_TAG', '')[1:] }}{{ '+' + environ.get('GIT_DESCRIBE_NUMBER', '0') + '.' + environ.get('GIT_DESCRIBE_HASH', '0') if environ.get('GIT_DESCRIBE_NUMBER', '0') != '0' else '' }}"
     build:
       number: {{ number }}
       skip: true  # [py<36]
