build for all CUDA versions (9.2+) available on Conda-Forge
MNT: Re-rendered with conda-build 3.20.3, conda-smithy 3.10.0, and conda-forge-pinning 2021.04.10.19.49.31

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set ucx_version = "1.9.0" %}
 {% set ucx_proc_version = "1.0.0" %}
-{% set number = "0" %}
+{% set number = "1" %}
 
 {% set ucx_proc_type = "cpu" if cuda_compiler_version == "None" else "gpu" %}
 
@@ -81,3 +81,4 @@ extra:
     - jakirkham
     - quasiben
     - TomAugspurger
+    - leofang
