--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -11,10 +11,34 @@ docker_image:                                # [os.environ.get("BUILD_PLATFORM",
 
 c_compiler_version:     # [linux]
   - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
   - 8                   # [ppc64le]
 cxx_compiler_version:   # [linux]
   - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
   - 8                   # [ppc64le]
+fortran_compiler_version:   # [linux]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 8                       # [ppc64le]
 
 cuda_compiler:   # [linux64 or win]
   - nvcc         # [linux64 or win]
