--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @Akshay-Venkatesh @TomAugspurger @jakirkham @leofang @quasiben
+* @Akshay-Venkatesh @TomAugspurger @jakirkham @leofang @matthiasdiener @quasiben
