--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,12 +4,18 @@ docker_image:                                # [os.environ.get("BUILD_PLATFORM",
    - quay.io/condaforge/linux-anvil-cos7-cuda:10.0       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
    - quay.io/condaforge/linux-anvil-cos7-cuda:10.1       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
    - quay.io/condaforge/linux-anvil-cos7-cuda:10.2       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
-   - quay.io/condaforge/linux-anvil-cos7-cuda:11.0       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
-   - quay.io/condaforge/linux-anvil-cos7-cuda:11.1       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
-   - quay.io/condaforge/linux-anvil-cos7-cuda:11.2       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+   - quay.io/condaforge/linux-anvil-cuda:11.0       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+   - quay.io/condaforge/linux-anvil-cuda:11.1       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+   - quay.io/condaforge/linux-anvil-cuda:11.2       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+   - quay.io/condaforge/linux-anvil-cuda:11.3       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+   - quay.io/condaforge/linux-anvil-cuda:11.4       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+   - quay.io/condaforge/linux-anvil-cuda:11.5       # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
 
 
 c_compiler_version:     # [linux]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
   - 7                   # [linux64 or aarch64]
   - 7                   # [linux64 or aarch64]
   - 7                   # [linux64 or aarch64]
@@ -28,8 +34,14 @@ cxx_compiler_version:   # [linux]
   - 7                   # [linux64 or aarch64]
   - 7                   # [linux64 or aarch64]
   - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
+  - 7                   # [linux64 or aarch64]
   - 8                   # [ppc64le]
 fortran_compiler_version:   # [linux]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
+  - 7                       # [linux64 or aarch64]
   - 7                       # [linux64 or aarch64]
   - 7                       # [linux64 or aarch64]
   - 7                       # [linux64 or aarch64]
@@ -52,6 +64,9 @@ cuda_compiler_version:
   - 11.0                       # [linux64 or win]
   - 11.1                       # [linux64 or win]
   - 11.2                       # [linux64 or win]
+  - 11.3                       # [linux64 or win]
+  - 11.4                       # [linux64 or win]
+  - 11.5                       # [linux64 or win]
 
 cudnn:
   - undefined                  # [linux64]
@@ -63,8 +78,14 @@ cudnn:
   - 8                          # [linux64 or win]
   - 8                          # [linux64 or win]
   - 8                          # [linux64 or win]
+  - 8                          # [linux64 or win]
+  - 8                          # [linux64 or win]
+  - 8                          # [linux64 or win]
 
 cdt_name:  # [linux]
+  - cos7   # [linux64]
+  - cos7   # [linux64]
+  - cos7   # [linux64]
   - cos7   # [linux64]
   - cos7   # [linux64]
   - cos7   # [linux64]
