--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,7 +58,6 @@ outputs:
         - cudatoolkit >=11.2,<12                   # [cuda_compiler_version == "11.2"]
       run_constrained:
         - ucx-proc * {{ ucx_proc_type }}
-        
     script: install_ucx.sh
     test:
       commands:
@@ -78,6 +77,7 @@ about:
   license_family: BSD
   license_file: LICENSE
   summary: Unified Communication X.
+  dev_url: https://github.com/openucx/ucx
   doc_url: https://openucx.readthedocs.io/
 
 extra:
