--- a/.ci_support/linux_aarch64_cuda_compiler_version12.0.yaml
+++ b/.ci_support/linux_aarch64_cuda_compiler_version12.0.yaml
@@ -9,19 +9,19 @@ cdt_arch:
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge
+- nvidia,conda-forge
 channel_targets:
-- conda-forge main
+- nvidia main
 cuda_compiler:
-- nvcc
+- cuda-nvcc
 cuda_compiler_version:
-- '11.2'
+- '12.0'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '10'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64-cuda:11.2
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 target_platform:
 - linux-aarch64
 ucx:
