--- a/.ci_support/linux_ppc64le_cuda_compiler_version12.0.yaml
+++ b/.ci_support/linux_ppc64le_cuda_compiler_version12.0.yaml
@@ -5,21 +5,21 @@ c_compiler_version:
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge
+- nvidia,conda-forge
 channel_targets:
-- conda-forge main
+- nvidia main
 cuda_compiler:
-- nvcc
+- cuda-nvcc
 cuda_compiler_version:
-- '11.2'
+- '12.0'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '10'
 docker_image:
-- quay.io/condaforge/linux-anvil-cuda:11.2
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 target_platform:
-- linux-64
+- linux-ppc64le
 ucx:
 - 1.14.0
 zip_keys:
