--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,10 +28,11 @@ outputs:
         - {{ compiler("cxx") }}
         - {{ cdt("libnl") }}             # [cdt_name == "cos6"]
         - {{ cdt("libnl3") }}            # [cdt_name == "cos7"]
-        - {{ cdt("numactl-devel") }}
         - cuda-cudart ={{ cuda_compiler_version }}
         - cuda-cudart-dev ={{ cuda_compiler_version }}
         - cuda-cudart-static ={{ cuda_compiler_version }}
+        - cuda-driver-dev ={{ cuda_compiler_version }}
+        - cuda-nvcc ={{ cuda_compiler_version }}
         - automake
         - autoconf
         - libtool
@@ -41,12 +42,10 @@ outputs:
         - cuda-cudart ={{ cuda_compiler_version }}
         - cuda-cudart-dev ={{ cuda_compiler_version }}
         - cuda-cudart-static ={{ cuda_compiler_version }}
+        - cuda-driver-dev ={{ cuda_compiler_version }}
+        - cuda-nvcc ={{ cuda_compiler_version }}
         - libnuma
       run:
-      run_constrained:
-        - cuda-cudart ={{ cuda_compiler_version }}
-        - cuda-cudart-dev ={{ cuda_compiler_version }}
-        - cuda-cudart-static ={{ cuda_compiler_version }}
     script: install_ucx.sh
     test:
       commands:
