--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ outputs:
         - cuda-cudart-static ={{ cuda_compiler_version }}
         - cuda-driver-dev ={{ cuda_compiler_version }}
         - cuda-nvcc ={{ cuda_compiler_version }}
+        - cuda-nvml-devel ={{ cuda_compiler_version }}
         - automake
         - autoconf
         - libtool
@@ -44,6 +45,7 @@ outputs:
         - cuda-cudart-static ={{ cuda_compiler_version }}
         - cuda-driver-dev ={{ cuda_compiler_version }}
         - cuda-nvcc ={{ cuda_compiler_version }}
+        - cuda-nvml-devel ={{ cuda_compiler_version }}
         - libnuma
       run:
     script: install_ucx.sh
