--- a/.ci_support/linux_aarch64_cuda_compiler_version12.0.yaml
+++ b/.ci_support/linux_aarch64_cuda_compiler_version12.0.yaml
@@ -9,9 +9,9 @@ cdt_arch:
 cdt_name:
 - cos7
 channel_sources:
-- nvidia,conda-forge
+- conda-forge
 channel_targets:
-- nvidia main
+- conda-forge main
 cuda_compiler:
 - cuda-nvcc
 cuda_compiler_version:
