--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,18 +1,82 @@
 c_compiler_version:
-  - 10
+  - 10 # [linux and aarch64]
+  - 10 # [linux and ppc64le]
+  - 10 # [linux and x86_64]
+  - 10 # [linux and aarch64]
+  - 10 # [linux and ppc64le]
+  - 10 # [linux and x86_64]
+  - 10 # [linux and x86_64]
+  - 9 # [linux and x86_64]
+  - 7 # [linux and x86_64]
 cxx_compiler_version:
-  - 10
-cuda_compiler_version:
-  - 12.0
-cuda_compiler:
-  - cuda-nvcc
+  - 10 # [linux and aarch64]
+  - 10 # [linux and ppc64le]
+  - 10 # [linux and x86_64]
+  - 10 # [linux and aarch64]
+  - 10 # [linux and ppc64le]
+  - 10 # [linux and x86_64]
+  - 10 # [linux and x86_64]
+  - 9 # [linux and x86_64]
+  - 7 # [linux and x86_64]
 fortran_compiler_version:
-  - 10
+  - 10 # [linux and aarch64]
+  - 10 # [linux and ppc64le]
+  - 10 # [linux and x86_64]
+  - 10 # [linux and aarch64]
+  - 10 # [linux and ppc64le]
+  - 10 # [linux and x86_64]
+  - 10 # [linux and x86_64]
+  - 9 # [linux and x86_64]
+  - 7 # [linux and x86_64]
+
+cuda_compiler_version:
+  - 12.0 # [linux and aarch64]
+  - 12.0 # [linux and ppc64le]
+  - 12.0 # [linux and x86_64]
+  - 11.2 # [linux and aarch64]
+  - 11.2 # [linux and ppc64le]
+  - 11.2 # [linux and x86_64]
+  - 11.1 # [linux and x86_64]
+  - 11.0 # [linux and x86_64]
+  - 10.2 # [linux and x86_64]
+cuda_compiler:
+  - cuda-nvcc # [linux and aarch64]
+  - cuda-nvcc # [linux and ppc64le]
+  - cuda-nvcc # [linux and x86_64]
+  - nvcc # [linux and aarch64]
+  - nvcc # [linux and ppc64le]
+  - nvcc # [linux and x86_64]
+  - nvcc # [linux and x86_64]
+  - nvcc # [linux and x86_64]
+  - nvcc # [linux and x86_64]
 cudnn:
-  - 8
+  - 8 # [linux and aarch64]
+  - 8 # [linux and ppc64le]
+  - 8 # [linux and x86_64]
+  - undefined # [linux and aarch64]
+  - undefined # [linux and ppc64le]
+  - undefined # [linux and x86_64]
+  - undefined # [linux and x86_64]
+  - undefined # [linux and x86_64]
+  - undefined # [linux and x86_64]
+
 cdt_name:
-  - cos7
+  - cos7 # [linux and aarch64]
+  - cos7 # [linux and ppc64le]
+  - cos7 # [linux and x86_64]
+  - cos7 # [linux and aarch64]
+  - cos7 # [linux and ppc64le]
+  - cos7 # [linux and x86_64]
+  - cos7 # [linux and x86_64]
+  - cos7 # [linux and x86_64]
+  - cos6 # [linux and x86_64]
 docker_image:
-  - quay.io/condaforge/linux-anvil-cos7-x86_64  # [linux and x86_64]
-  - quay.io/condaforge/linux-anvil-aarch64      # [linux and aarch64]
-  - quay.io/condaforge/linux-anvil-ppc64le      # [linux and ppc64le]
+  - quay.io/condaforge/linux-anvil-aarch64            # [linux and aarch64]
+  - quay.io/condaforge/linux-anvil-ppc64le            # [linux and ppc64le]
+  - quay.io/condaforge/linux-anvil-cos7-x86_64        # [linux and x86_64]
+  - quay.io/condaforge/linux-anvil-aarch64-cuda:11.2  # [linux and aarch64]
+  - quay.io/condaforge/linux-anvil-ppc64le-cuda:11.2  # [linux and ppc64le]
+  - quay.io/condaforge/linux-anvil-cuda:11.2          # [linux and x86_64]
+  - quay.io/condaforge/linux-anvil-cuda:11.1          # [linux and x86_64]
+  - quay.io/condaforge/linux-anvil-cuda:11.0          # [linux and x86_64]
+  - quay.io/condaforge/linux-anvil-cuda:10.2          # [linux and x86_64]
