--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - cuda12.patch
 
 build:
-  skip: true  # [not linux or cuda_compiler_version != "12.0"]
+  skip: true  # [not linux]
   number: {{ number }}
 
 outputs:
