--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -8,16 +8,31 @@ jobs:
     vmImage: ubuntu-latest
   strategy:
     matrix:
-      linux_64_c_compiler_version10cdt_namecos7cuda_compilercuda-nvcccuda_compiler_version12.0cxx_compiler_version10:
-        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compilercuda-nvcccuda_compiler_version12.0cxx_compiler_version10
+      linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.1cxx_compiler_version10:
+        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.1cxx_compiler_version10
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cuda:11.1
+        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h521225f990
+      linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.2cxx_compiler_version10:
+        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.2cxx_compiler_version10
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cuda:11.2
+        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_he3a2f1ce9b
+      linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version12.0cxx_compiler_version10:
+        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version12.0cxx_compiler_version10
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h584c26a7f8
-      linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version12.0cxx_compiler_version10:
-        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version12.0cxx_compiler_version10
+        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h50c9a5bb65
+      linux_64_c_compiler_version7cdt_namecos6cuda_compiler_version10.2cxx_compiler_version7:
+        CONFIG: linux_64_c_compiler_version7cdt_namecos6cuda_compiler_version10.2cxx_compiler_version7
         UPLOAD_PACKAGES: 'True'
-        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h6b5d2da184
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cuda:10.2
+        SHORT_CONFIG: linux_64_c_compiler_version7cdt_nam_ha7e0d9f082
+      linux_64_c_compiler_version9cdt_namecos7cuda_compiler_version11.0cxx_compiler_version9:
+        CONFIG: linux_64_c_compiler_version9cdt_namecos7cuda_compiler_version11.0cxx_compiler_version9
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cuda:11.0
+        SHORT_CONFIG: linux_64_c_compiler_version9cdt_nam_h693589cb10
   timeoutInMinutes: 360
 
   steps:
