--- a/.ci_support/linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.1cxx_compiler_version10.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.1cxx_compiler_version10.yaml
@@ -1,11 +1,7 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 c_compiler:
 - gcc
 c_compiler_version:
 - '10'
-cdt_arch:
-- aarch64
 cdt_name:
 - cos7
 channel_sources:
@@ -13,17 +9,17 @@ channel_sources:
 channel_targets:
 - conda-forge main
 cuda_compiler:
-- cuda-nvcc
+- nvcc
 cuda_compiler_version:
-- '12.0'
+- '11.1'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
 - '10'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- quay.io/condaforge/linux-anvil-cuda:11.1
 target_platform:
-- linux-aarch64
+- linux-64
 ucx:
 - 1.14.0
 zip_keys:
