Fix mixed CUDA version builds

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -39,6 +39,8 @@ cuda_compiler_version:
   - 11.1        # [linux and x86_64]
   - 11.0        # [linux and x86_64]
   - 10.2        # [linux and x86_64]
+cuda_compiler:
+  - nvcc
 cudnn:
   - 8           # [linux and aarch64]
   - 8           # [linux and ppc64le]
