--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,8 +38,8 @@ outputs:
         - libnuma
       run:
       run_constrained:
-        - cudatoolkit {{ cuda_compiler_version }}  # [cuda_compiler_version not in ("None", "11.2")]
-        - cudatoolkit >=11.2,<12                   # [cuda_compiler_version == "11.2"]
+        - cudatoolkit {{ cuda_compiler_version }}|{{ cuda_compiler_version }}.*  # [cuda_compiler_version not in ("None", "11.2")]
+        - cudatoolkit >=11.2,<12                                                 # [cuda_compiler_version == "11.2"]
     script: install_ucx.sh
     test:
       commands:
