--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -8,31 +8,36 @@ jobs:
     vmImage: ubuntu-latest
   strategy:
     matrix:
-      linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.1cxx_compiler_version10:
-        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.1cxx_compiler_version10
+      linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.1cxx_compiler_version10:
+        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.1cxx_compiler_version10
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cuda:11.1
-        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h521225f990
-      linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.2cxx_compiler_version10:
-        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version11.2cxx_compiler_version10
+        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h9581c58a7d
+      linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10:
+        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cuda:11.2
-        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_he3a2f1ce9b
-      linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version12.0cxx_compiler_version10:
-        CONFIG: linux_64_c_compiler_version10cdt_namecos7cuda_compiler_version12.0cxx_compiler_version10
+        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h981be9fd87
+      linux_64_c_compiler_version12cdt_namecos6cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12:
+        CONFIG: linux_64_c_compiler_version12cdt_namecos6cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-        SHORT_CONFIG: linux_64_c_compiler_version10cdt_na_h50c9a5bb65
-      linux_64_c_compiler_version7cdt_namecos6cuda_compiler_version10.2cxx_compiler_version7:
-        CONFIG: linux_64_c_compiler_version7cdt_namecos6cuda_compiler_version10.2cxx_compiler_version7
+        SHORT_CONFIG: linux_64_c_compiler_version12cdt_na_hd1397b5cda
+      linux_64_c_compiler_version12cdt_namecos7cuda_compilercuda-nvcccuda_compiler_version12.0cxx_compiler_version12:
+        CONFIG: linux_64_c_compiler_version12cdt_namecos7cuda_compilercuda-nvcccuda_compiler_version12.0cxx_compiler_version12
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        SHORT_CONFIG: linux_64_c_compiler_version12cdt_na_ha1e2f0c6ae
+      linux_64_c_compiler_version7cdt_namecos6cuda_compilernvcccuda_compiler_version10.2cxx_compiler_version7:
+        CONFIG: linux_64_c_compiler_version7cdt_namecos6cuda_compilernvcccuda_compiler_version10.2cxx_compiler_version7
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-cuda:10.2
-        SHORT_CONFIG: linux_64_c_compiler_version7cdt_nam_ha7e0d9f082
-      linux_64_c_compiler_version9cdt_namecos7cuda_compiler_version11.0cxx_compiler_version9:
-        CONFIG: linux_64_c_compiler_version9cdt_namecos7cuda_compiler_version11.0cxx_compiler_version9
+        SHORT_CONFIG: linux_64_c_compiler_version7cdt_nam_h20d589c651
+      linux_64_c_compiler_version9cdt_namecos7cuda_compilernvcccuda_compiler_version11.0cxx_compiler_version9:
+        CONFIG: linux_64_c_compiler_version9cdt_namecos7cuda_compilernvcccuda_compiler_version11.0cxx_compiler_version9
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cuda:11.0
-        SHORT_CONFIG: linux_64_c_compiler_version9cdt_nam_h693589cb10
+        SHORT_CONFIG: linux_64_c_compiler_version9cdt_nam_h002867c79f
   timeoutInMinutes: 360
 
   steps:
