--- a/.ci_support/linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.2cxx_compiler_version10.yaml
@@ -17,14 +17,15 @@ cxx_compiler:
 cxx_compiler_version:
 - '10'
 docker_image:
-- quay.io/condaforge/linux-anvil-ppc64le-cuda:11.2
+- quay.io/condaforge/linux-anvil-cuda:11.2
 target_platform:
-- linux-ppc64le
+- linux-64
 ucx:
 - 1.14.0
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+  - cuda_compiler
   - cuda_compiler_version
   - cdt_name
   - docker_image
