--- a/.ci_support/linux_64_c_compiler_version12cdt_namecos6cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12.yaml
+++ b/.ci_support/linux_64_c_compiler_version12cdt_namecos6cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version12.yaml
@@ -1,34 +1,31 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
-cdt_arch:
-- aarch64
+- '12'
 cdt_name:
-- cos7
+- cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
 cuda_compiler:
-- nvcc
+- None
 cuda_compiler_version:
-- '12.0'
+- None
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '12'
 docker_image:
-- quay.io/condaforge/linux-anvil-aarch64
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 target_platform:
-- linux-aarch64
+- linux-64
 ucx:
 - 1.14.0
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
+  - cuda_compiler
   - cuda_compiler_version
   - cdt_name
   - docker_image
