--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,10 +34,9 @@ outputs:
         - libtool
         - make
         - pkg-config
-        - rdma-core =28.*  # Use version 28.* to supports MOFED 5.0.x and above
       host:
         - libnuma
-        - rdma-core =28.*  # Use version 28.* to supports MOFED 5.0.x and above
+        - rdma-core
       run:
       run_constrained:
         - cudatoolkit {{ cuda_compiler_version }}|{{ cuda_compiler_version }}.*  # [cuda_compiler_version not in ("None", "11.2")]
