MNT: Re-rendered with conda-build 3.23.3, conda-smithy 3.23.1, and conda-forge-pinning 2023.05.22.18.49.32

--- a/.ci_support/linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.1cxx_compiler_version10.yaml
+++ b/.ci_support/linux_64_c_compiler_version10cdt_namecos7cuda_compilernvcccuda_compiler_version11.1cxx_compiler_version10.yaml
@@ -18,6 +18,8 @@ cxx_compiler_version:
 - '10'
 docker_image:
 - quay.io/condaforge/linux-anvil-cuda:11.1
+rdma_core:
+- '28'
 target_platform:
 - linux-64
 ucx:
