--- a/.ci_support/linux_64_c_compiler_version7cdt_namecos6cuda_compilernvcccuda_compiler_version10.2cxx_compiler_version7.yaml
+++ b/.ci_support/linux_64_c_compiler_version7cdt_namecos6cuda_compilernvcccuda_compiler_version10.2cxx_compiler_version7.yaml
@@ -18,6 +18,8 @@ cxx_compiler_version:
 - '7'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-cuda:10.2
+rdma_core:
+- '28'
 target_platform:
 - linux-64
 ucx:
