--- a/.ci_support/linux_64_c_compiler_version9cdt_namecos7cuda_compilernvcccuda_compiler_version11.0cxx_compiler_version9.yaml
+++ b/.ci_support/linux_64_c_compiler_version9cdt_namecos7cuda_compilernvcccuda_compiler_version11.0cxx_compiler_version9.yaml
@@ -18,6 +18,8 @@ cxx_compiler_version:
 - '9'
 docker_image:
 - quay.io/condaforge/linux-anvil-cuda:11.0
+rdma_core:
+- '28'
 target_platform:
 - linux-64
 ucx:
