Add `rdma-core` pin to `run_exports`

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ outputs:
       number: {{ number }}
       run_exports:
         - {{ pin_subpackage("ucx", max_pin="x.x") }}
+        - rdma-core>=48  # [linux64]
       ignore_run_exports_from:
         - {{ compiler("cuda") }}
     requirements:
