MNT: Re-rendered with conda-build 3.28.4, conda-smithy 3.30.4, and conda-forge-pinning 2024.02.20.09.46.26

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @Akshay-Venkatesh @TomAugspurger @jakirkham @leofang @matthiasdiener @quasiben
+* @Akshay-Venkatesh @TomAugspurger @jakirkham @leofang @matthiasdiener @quasiben @xhochy
