Test post-link script is installed

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,6 +56,7 @@ outputs:
         - test ! -f "${PREFIX}/lib/libucs.a"
         - test -f "${PREFIX}/lib/libuct${SHLIB_EXT}"
         - test ! -f "${PREFIX}/lib/libuct.a"
+        - test -f "${PREFIX}/bin/.ucx-post-link.sh"
         - test -f "${PREFIX}/bin/ucx_info"
         - ucx_info -v
     about:
