Disable again ucx_info on ppc64le
Co-authored-by: jakirkham <jakirkham@gmail.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,7 +62,8 @@ outputs:
         - test ! -f "${PREFIX}/lib/libuct.a"
         - test -f "${PREFIX}/bin/.ucx-post-link.sh"
         - test -f "${PREFIX}/bin/ucx_info"
-        - ucx_info -v
+        # Fails on ppc64le
+        - ucx_info -v  # [not ppc64le]
     about:
       home: https://openucx.org
       license: BSD-3-Clause
